--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,21 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: test@postgres.com
+      PGADMIN_DEFAULT_PASSWORD: 123456
+    depends_on:
+      - db
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
 
 volumes:
   db_data:
   redis_data:
+  pgadmin-data:
