--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "resolveJsonModule": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
