feat: - add all needed routes - add rateLimiter - add repository layer - add cache for city's lat and lon - add validation base on dtos

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-# Example environment variables for weatherapp
-
+# App
 NODE_ENV=development
-PORT=3000
+PORT=
 
-DB_HOST=db
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=weatherdb
+# PostgreSQL
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-REDIS_HOST=redis
+# Redis
+REDIS_HOST=
+REDIS_PORT=
+
+# Weather API
+WEATHER_API_KEY=you_can_get_your_own_key_from_openweathermap.org
