fix: update readme.md and env.example files for better documentation

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # App
 NODE_ENV=development
-PORT=
+PORT=3000
 
 # PostgreSQL
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST=db
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=weatherdb
 
 # Redis
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 # Weather API
 WEATHER_API_KEY=you_can_get_your_own_key_from_openweathermap.org
